# gAgent

./: .clang-format  .gitignore  .gitignore~  BUGFIXES.md  CHANGELOG.md  CMakeLists.txt  COMPILATION_FIXES.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Doxyfile  Doxyfile.sphinx  IMPROVEMENTS.md  LICENSE  Makefile.am  PROJECT_STATUS.md  QUICKSTART.md  README.md  SUMMARY.txt  configure.ac  dist-README.md
.github/workflows/: ci.yml
build_test/: Makefile
build_test/examples/: Makefile  improved_agent
build_test/src/: Makefile
build_test/src/messaging/: fipa_acl_lexer.cpp  fipa_acl_parser.cpp  fipa_acl_parser.hpp  location.hh
build_test/src_agent/: Makefile  fipa_acl_lexer.cpp  fipa_acl_parser.cpp  fipa_acl_parser.hpp  location.hh
build_test/src_agent/gagent_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_test/src_agent/gagent_autogen/EWIEGA46WW/: moc_EnvironnementGui.cpp.d
build_test/test_agent/: Makefile  main
build_test/tests/: Makefile  test_gagent  test_nsap  two_agents_acl
cmake/: gAgentConfig.cmake.in
conception/: manager
corba/: FipaInterface_impl.cpp  FipaInterface_impl.h  client  client.cpp  fipa.hh  fipa.idl  fipaSK.cc  makefile  server  server.cpp
corba/MSG_FIPA/: AgentID.hpp  AgentIDs.hpp  DataTime.hpp  Envelope.hpp  Envelopes.hpp  FipaMessage.hpp  Payload.hpp  Property.hpp  RecevedObject.hpp  URL.hpp
doc/: .gitignore  <.aux  Makefile  ch1.tex.aux  ch1.tex.backup  conf.py  doc_v1.odt  gAgent.aux  gAgent.blg  gAgent.out  gAgent.tex  gAgent.tex.backup  gAgent.toc  gagent.kilepr  index.rst
doc/api/: comm.rst  core.rst  env.rst  messaging.rst  utils.rst
doc/pages/: agent_lifecycle.rst  architecture.rst  behaviours.rst  contributing.rst  fipa_acl.rst  logging.rst  messaging.rst  nsap.rst  overview.rst  platform.rst  protocols.rst  python_agent.rst  quickstart.rst  roadmap.rst  visualization.rst
doc/tutorials/: bases.rst  behaviours.rst  communication.rst  conclusion.rst  contract_net.rst  debug_logging.rst  env_agentview.rst  env_concept.rst  env_exemple.rst  env_gagent.rst  env_nsap.rst  environnement.rst  envoi_reception.rst  fipa_acl.rst  index.rst  introduction.rst  lifecycle.rst  llm.rst  llm_cpp.rst  llm_intro.rst  llm_python.rst  plateforme.rst  platform_ams_df.rst  platform_migration.rst  platform_multihost.rst  platform_outils.rst  platform_reseau.rst  premiers_pas.rst  protocoles.rst  request.rst  structure_main.rst  subscribe_notify.rst  tests_mock.rst  transport.rst
doc_old/: ch1.tex
doc_old/img/: cycle.dia
docker/: README.md
examples/: CMakeLists.txt  README.md  demo_visualization.cpp  improved_agent.cpp  llm_agent.cpp  llm_agent.py
fipa_cal/: ACLMessage.cpp  ACLMessage.hpp  Performatives.cpp  Performatives.h  a.out  main.cpp
include/gagent/comm/: CommunicationManager.hpp
include/gagent/core/: Agent.hpp  AgentCore.hpp  Behaviour.hpp  BehaviourFactory.hpp  DFAgentDescription.hpp
include/gagent/env/: Environnement.hpp
include/gagent/messaging/: AclMQ.hpp  ITransport.hpp  MockTransport.hpp  ZmqTransport.hpp
include/gagent/platform/: AMSClient.hpp  EnvClient.hpp  PlatformConfig.hpp
include/gagent/protocols/: ContractNet.hpp  Request.hpp  SubscribeNotify.hpp
include/gagent/python/: PythonBehaviour.hpp
include/gagent/utils/: ErrorHandler.hpp  Logger.hpp
platform/: CMakeLists.txt  SlaveRegistry.cpp  SlaveRegistry.hpp  config.cfg  main.cpp
platform/ams/: AMS.cpp  AMS.hpp  AgentRecord.hpp
platform/common/: Args.cpp  Args.hpp  socket_utils.hpp
platform/df/: DF.cpp  DF.hpp  Service.hpp
platform/manager/: Manager.cpp  Manager.hpp
platform/monitor/: Monitor.cpp  Monitor.hpp
python/gagent_py/: __init__.py  agent.py
scripts/: build.sh  format-code.sh  run-tests.sh
spirit/: MessageParser.cpp  MessageParser.hpp  a.out  error  fipa_acl.cpp  fipa_message.h  fipa_msg.txt  main.cpp  main2  main2.cpp  main3  main3.cpp  main_old.cpp
src/: CMakeLists.txt
src/comm/: CommunicationManager.cpp
src/core/: Agent.cpp  AgentCore.cpp  AgentFactory.cpp  AgentID.cpp  Behaviour.cpp  DFAgentDescription.cpp  DFService.cpp
src/env/: Environnement.cpp  VisualAgent.cpp
src/gui/: EnvironnementGui.hpp
src/messaging/: ACLMessage.cpp  AclMQ.cpp  FipaAclDriver.hpp  fipa_acl.l  fipa_acl.y
src/platform/: AMSClient.cpp  DFClient.cpp  EnvClient.cpp  PlatformConfig.cpp
src/python/: PythonBehaviour.cpp
src/utils/: ErrorHandler.cpp  udp_client_server.cpp  udp_client_server.hpp
src_agent/: ACLMessage.cpp  ACLMessage.hpp  Agent.cpp  Agent.hpp  AgentComChannel.cpp  AgentComChannel.hpp  AgentCore.cpp  AgentCore.hpp  AgentID.hpp  AgentService.cpp  AgentService.hpp  Behaviour.cpp  Behaviour.hpp  BehaviourFactory.hpp  CMakeLists.txt  CommunicationManager.cpp  CommunicationManager.hpp  DFAgentDescription.cpp  DFAgentDescription.hpp  DFService.cpp  DFService.hpp  Environnement.cpp  Environnement.hpp  EnvironnementGui.cpp  EnvironnementGui.hpp  ErrorHandler.cpp  ErrorHandler.hpp  FipaAclDriver.cpp  FipaAclDriver.hpp  Logger.hpp  MessageParser.cpp  MessageParser.hpp  README  VisualAgent.cpp  VisualAgent.hpp  fipa_acl.y  gAgentGui.hpp  makefile  udp_client_server.cpp
src_agent/gui/: EnvironnementGui.cpp  EnvironnementGui.hpp
src_envs_old/: CMakeLists.txt  Environnement.cpp  Environnement.h  EnvironnementGui.cpp  EnvironnementGui.h  Makefile  VisualAgent.cpp  VisualAgent.h  main.cpp  make.pro  src_envs.pro
src_manager/: #agentmanager#  #makefile#  AgentManager.cpp  AgentManager.hpp  AgentPlatform.cpp  AgentPlatform.hpp  Args.cpp  Args.hpp  Service.cpp  Service.hpp  agentplatform  config.cfg  config.hpp  gAgent  main.cpp  makefile  udp_client_server.hpp
test_agent/: CMakeLists.txt  config.cfg  main.cpp  makefile  testAgent  testfile.cpp
tests/: CMakeLists.txt  main.cpp  test_acl.cpp  test_concurrent_send.cpp  test_contract_net.cpp  test_mock_transport.cpp  test_nsap.cpp  test_platform.cpp  test_request.cpp  test_subscribe_notify.cpp  two_agents_acl.cpp
view/: CMakeLists.txt  main.cpp
